tests/reference/asr-compare_01-c98905f.stderr
semantic error: Operands of comparison operator are of different types
 --> tests/errors/compare_01.f90:6:9
  |
6 |     if (i > x) then
  |         ^^^^^ 
